--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/happyhyppostudio/"><i class="fab fa-fw fa-instagram"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/hyppo_happ71939"><i class="fab fa-fw fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/channel/UCEwCCGz0bEEPW92r17B_WkQ"><i class="fab fa-fw fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-deviantart"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-github"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.deviantart.com/happyhyppostudio"><i class="fab fa-fw fa-deviantart"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/HappyHyppoStudio"><i class="fab fa-fw fa-github"></i></a>
                 </div>
             </div>
         </footer>
