--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/HappyHippoC.png" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">HAPPY HYPPO STUDIO 2</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">HAPPY HYPPO STUDIO</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
