--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/DanielAlvarez.png" alt="..." />
+                            <img class="img-fluid" src="assets/Daniel_Alvarez.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -90,7 +90,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/MauricioFernandez.png" alt="..." />
+                            <img class="img-fluid" src="assets/Mauricio_Fernandez.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -99,7 +99,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/NoeliaNMaqueda.png" alt="..." />
+                            <img class="img-fluid" src="assets/NoeliaN_Maqueda.jpg" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -108,7 +108,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
+                            <img class="img-fluid" src="assets/Gonzalo_DeLaTorre.jpg" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -117,7 +117,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
+                            <img class="img-fluid" src="assets/Daniel_Bermejo.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -126,7 +126,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
+                            <img class="img-fluid" src="assets/Yago_Ortiz.jpg" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -383,7 +383,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/DanielAlvarez.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Daniel_Alvarez.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un apasionado desarrollador de software con experiencia en la creación de soluciones técnicas innovadoras y efectivas. Mi enfoque se centra en la programación, la resolución de problemas y la mejora continua.</p>
                                     <p class="mb-4">Experiencia: programación avanzada, desarrollo web, gestión de base de datos y automatización y scripts</p>
@@ -417,10 +417,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/MauricioFernandez.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Mauricio_Fernandez.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy diseñador con un ojo creativo y un compromiso inquebrantable con la estética visual. Mi misión es transformar mis ideas en elementos visuales cautivadores y funcionales que contribuyan a la identidad de marca y narrativa de un prooyecto.</p>
-                                    <p class="mb-4">Experiencia: diseño gráfico, ilustración digital, animación  y Motion Graphics y diseño de redes sociales.</p>
+                                    <p class="mb-4">Experiencia: diseño gráfico, ilustración digital, animación, Motion Graphics y diseño de redes sociales.</p>
                                     <p class="mb-4">Correo: m.fernandezr.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -451,7 +451,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/NoeliaNMaqueda.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/NoeliaN_Maqueda.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy una diseñadora creativa y multifacética con un enfoque en la creación de experiencias visuales excepcionales para aplicaciones y juegos. Mi experiencia abarca tres áreas fundamentales: diseño de interfaz de usuario (UI), diseño y desarrollo de portfolios y creación de Game Design Document (GDD)</p>
                                     <p class="mb-4">Experiencia: diseño de interfaces intuitivas, creación de portfolios, creación de GDDs y elaboración de diagramas de flujo.</p>
@@ -485,10 +485,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Gonzalo_DeLaTorre.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Descripción.</p>
-                                    <p class="mb-4">Experiencia.</p>
+                                    <p class="mb-4">Soy un aficionado a los videojuegos, y me he dedicado a explorar gran diversidad de mundos inmersivos gracias a sus audios e historias. Busco aprender a trasmitir ese sentimiento a través de mis audios y mi portfolio es mi forma de expresarlo.</p>
+                                    <p class="mb-4">Experiencia: técnico de música y sonido.</p>
                                     <p class="mb-4">Correo: g.delatorre.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -519,10 +519,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Daniel_Bermejo.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Descripción.</p>
-                                    <p class="mb-4">Experiencia.</p>
+                                    <p class="mb-4">Soy un amante de los videojuegos con experiencia en programación, centrado principalmente en el backend, busco crear videojuegos que transmitan mi amor por este medio además de crear experiencias diferentes y apasionantes.</p>
+                                    <p class="mb-4">Experiencia: técnico superior de desarrollo de aplicaciones multiplataforma y backend.</p>
                                     <p class="mb-4">Correo: d.bermejo.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -553,10 +553,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Yago_Ortiz.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Descripción.</p>
-                                    <p class="mb-4">Experiencia.</p>
+                                    <p class="mb-4">Soy un verdadero entusiasta de los videojuegos, un apasionado que ha dedicado su vida a explorar y crear en el emocionante mundo de estos mismos. Mi portafolio es un testimonio de mi amor por esta forma de arte interactiva que me ha inspirado y cautivado durante años. Permíteme llevarte a un recorrido a través de mi viaje en los videojuegos.</p>
+                                    <p class="mb-4">Experiencia: laboral de informático y desarrollo (principalmente backend).</p>
                                     <p class="mb-4">Correo: y.ortiz.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
