--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/Daniel_Alvarez.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un apasionado desarrollador de software con experiencia en la creación de soluciones técnicas innovadoras y efectivas. Mi enfoque se centra en la programación, la resolución de problemas y la mejora continua.</p>
-                                    <p class="mb-4">Experiencia: programación avanzada, desarrollo web, gestión de base de datos y automatización y scripts</p>
+                                    <p class="mb-4">Experiencia: programación avanzada, desarrollo web, gestión de base de datos y automatización y scripts.</p>
                                     <p class="mb-4">Correo: d.alvarez.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -453,7 +453,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/NoeliaN_Maqueda.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Soy una diseñadora creativa y multifacética con un enfoque en la creación de experiencias visuales excepcionales para aplicaciones y juegos. Mi experiencia abarca tres áreas fundamentales: diseño de interfaz de usuario (UI), diseño y desarrollo de portfolios y creación de Game Design Document (GDD)</p>
+                                    <p class="mb-4">Soy una diseñadora creativa y multifacética con un enfoque en la creación de experiencias visuales excepcionales para aplicaciones y juegos. Mi experiencia abarca tres áreas fundamentales: diseño de interfaz de usuario (UI), diseño y desarrollo de portfolios y creación de Game Design Document (GDD).</p>
                                     <p class="mb-4">Experiencia: diseño de interfaces intuitivas, creación de portfolios, creación de GDDs y elaboración de diagramas de flujo.</p>
                                     <p class="mb-4">Correo: nn.maqueda.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
