--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/Portfolio_Mana_Rangers.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Adéntrate en un mundo medieval en el que podrás derrotar enemigos en emocionantes niveles mediante el poder de los elementos.</p>
+                                    <p>Para saber más pulse <a href="mana_rangers.html">aquí</a></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
