--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Happy Hyppo Studio - Portfolio</title>
+        <title>MANA RANGERS - Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/HappyHippo.png" />
         <!-- Font Awesome icons (free version)-->
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center" id="inicio">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/HappyHippoC.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/MANA RANGERS_LOGO.png" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">MANA RANGERS</h1>
                 <!-- Icon Divider-->
