--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center" id="inicio">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png" width="4000" height="2024" alt="..." />
                 <!-- Masthead Heading-->
                 <!--<h1 class="masthead-heading text-uppercase mb-0">MANA RANGERS</h1>-->
                 <!-- Icon Divider-->
@@ -50,7 +50,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte</i></p>
+                <p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>
             </div>
         </header>
         <!-- Portfolio Section-->
