--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -44,11 +44,11 @@
                 <!-- Masthead Heading-->
                 <!--<h1 class="masthead-heading text-uppercase mb-0">MANA RANGERS</h1>-->
                 <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
+                <!--<div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
-                </div>
+                </div>-->
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>
             </div>
