--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center" id="inicio">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png"/>
                 <!-- Masthead Heading-->
                 <!--<h1 class="masthead-heading text-uppercase mb-0">MANA RANGERS</h1>-->
                 <!-- Icon Divider-->
